<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="#2e2f30"
    android:weightSum="100">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true">

        <ImageView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:background="@color/colorPrimaryDark"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/petImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/pet_icon"
            app:layout_anchor="@id/header"
            app:layout_anchorGravity="center|bottom" />
    </android.support.design.widget.CoordinatorLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/soy"
                android:gravity="center_horizontal"
                android:textColor="@color/greyDark"
                android:textSize="25dp" />
            <TextView
                android:id="@+id/petName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/petName"
                android:textColor="@color/greyDark"
                android:textSize="25dp"
                android:layout_toRightOf="@+id/soy"/>

        </LinearLayout>

        <TextView
            android:id="@+id/petStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/available"
            android:textColor="@color/greyDark"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_below="@+id/data"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/dni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dni"
            android:textColor="@color/greyDark"
            android:textSize="25dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_below="@+id/petStatus"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:id="@+id/petId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/petDni"
            android:textColor="@color/greyDark"
            android:textSize="25dp"
            android:gravity="center"
            android:layout_below="@+id/dni"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</LinearLayout>
